--- a/README.Rmd
+++ b/README.Rmd
@@ -19,7 +19,7 @@ knitr::opts_chunk$set(
 
 ## Overview
 
-The `plausibounds` package implements methods from [Freyaldenhoven and Hansen (2025)](https://simonfreyaldenhoven.github.io/papers/Plausible_bounds.pdf) to compute restricted bounds for treatment path estimates from event studies and dynamic panel data models. The package provides an alternative solution between pointwise confidence intervals and uniform confidence bands through data-driven surrogate paths that adapt to smoothness and correlation structure.
+The `plausibounds` package implements the additions to dynamic effect plots suggested in [Freyaldenhoven and Hansen (2026)](https://simonfreyaldenhoven.github.io/papers/Plausible_bounds.pdf). Data-driven smoothing delivers a smooth estimated path with potentially improved point estimation properties and confidence regions covering a surrogate that can be substantially tighter than conventional pointwise or uniform bands.
 
 ## Installation
 
@@ -36,20 +36,22 @@ devtools::install_github("SimonFreyaldenhoven/plausibounds")
 
 Find a minimal example below. For more information see the package [documentation](https://cran.r-project.org/package=plausibounds/plausibounds.pdf) and [vignette](https://cran.r-project.org/package=plausibounds/vignettes/documentation.html).
 
-```{r example}
+```{r example, results = FALSE, message = FALSE}
 library(plausibounds)
 library(ggplot2)
 
 # Load example data
-data(estimates_wiggly)
-data(var_iid)
+data(estimates_bighump)
+data(var_bighump)
 
 # Compute restricted bounds
 pb <- plausible_bounds(
-  estimates = estimates_wiggly,
-  var = var_iid
+  estimates = estimates_bighump[1:12],
+  var = var_bighump[1:12, 1:12]
 )
+```
 
+```{r view-plot}
 # View results
 summary(pb)
 
@@ -60,8 +62,8 @@ create_plot(pb)
 ```{r, eval = FALSE}
 # Example with parallel processing
 pb_parallel <- plausible_bounds(
-  estimates = estimates_wiggly,
-  var = var_iid,
+  estimates = estimates_bighump,
+  var = var_bighump,
   alpha = 0.05,
   parallel = TRUE,
   n_cores = 4
@@ -70,6 +72,6 @@ pb_parallel <- plausible_bounds(
 
 ## Citation
 
-Simon Freyaldenhoven, Christian Hansen. "(Visualizing) Plausible Treatment Effect Paths." Federal Reserve Bank of Philadelphia and University of Chicago, 2025.
+Simon Freyaldenhoven, Christian Hansen. "(Visualizing) Plausible Treatment Effect Paths." Federal Reserve Bank of Philadelphia and University of Chicago, 2026.
 
-Ryan Kobler. "`plausibounds` package." Code and data repository at <https://github.com/SimonFreyaldenhoven/plausibounds>, 2025.
+Simon Freyaldenhoven, Christian Hansen, Ryan Kobler. "`plausibounds` package." Code and data repository at <https://github.com/SimonFreyaldenhoven/plausibounds>, 2026.
