--- a/vignettes/documentation.Rmd
+++ b/vignettes/documentation.Rmd
@@ -30,15 +30,57 @@ The `plausibounds` package provides simple additions to standard visualizations 
 
 We write $\theta=(\beta^{pre'},\beta')'$ for the $p \times 1$ vector that collects the elements of the dynamic treatment effect path depicted on the dynamic effect plot. Here, $\beta_{pre} = \{\beta^{pre}_h\}_{h={-L}}^{-1}$ denotes the displayed pre-event effects, $\beta=\{\beta_h\}_{h={1}}^{H}$ collects the dynamic treatment effect path after the event up to the fixed maximum horizon of interest $H$, and thus $p = H+L$. We assume access to point estimates of the parameters $\theta_h$, denoted by $\hat{\theta}_h$, that correspond to the cumulative effect of the policy at horizon $h$ relative to period 0. Throughout, we assume the vector that collects the estimated dynamic treatment effect path, $\hat\theta$, satisfies $\hat\theta \sim N(\theta,V_{\theta})$ and that we have access to the covariance matrix $V_{\theta}$. Leading examples to obtain such estimates include distributed lag models, local projections, and event studies.
 
-The package takes $\theta$ and $V_{\theta}$ as input.
+The package takes $\hat{\theta}$ and $\hat{V}_{\theta}$ as input.
 
 ### Finding the surrogate path
 
-The main contribution is to include new visual elements meant to depict approximations to the underlying effect path constrained to exhibit economically and statistically plausible shapes. Intuitively, these elements formalize "visual data snooping": Our proposal approximates looking at a dynamic effect plot and then choosing a specification that "captures the main dynamics" while a) providing a notion of valid inference that explicitly accounts for the data-dependent choice of specification and b) using the full covariance structure of the estimates when choosing the specification.
+The main contribution is to include new visual elements meant to depict approximations to the underlying effect path constrained to exhibit economically and statistically plausible shapes. Intuitively, these elements formalize "visual data snooping": Our proposal approximates looking at a dynamic effect plot and then choosing a specification that "captures the main dynamics." 
+This specification should a) provide a notion of valid inference that explicitly accounts for the data-dependent choice of specification and b) use the full covariance structure of the estimates when choosing the specification.
 
-Specifically, we construct *restricted estimates* and *plausible bounds* by using data-driven regularization to select an approximation to the treatment path from a pre-specified class. We consider a default universe motivated by a preference for smooth dynamics that eventually die out. The restricted estimates are the resulting regularized point estimates of the treatment path. Our plausible bounds are sup-t bands under the selected approximation, adjusted to account for data-dependent selection using Berk et al.'s [2014] post-selection inference (PoSI).
+Specifically, we construct *restricted estimates* and *plausible bounds* by using data-driven regularization to select an approximation to the treatment path from a pre-specified class of models. We consider a default universe of approximations motivated by a preference for (1) smooth dynamics that (2) eventually die out. The restricted estimates are the resulting regularized point estimates of the treatment path. Our plausible bounds are sup-t bands under the selected approximation, adjusted to account for data-dependent selection using Berk et al.'s [2013] post-selection inference (PoSI).
 
 Intuitively, the plausible bounds represent a compromise between inference under no restrictions --- which may yield very wide confidence intervals --- and inference based on a single, prespecified model that does not adapt to the data and may therefore be overly restrictive.
+
+
+The approach approximates $\hat{\beta}$ (assumed to be jointly normal with $\hat{\beta} \sim N(\beta, V_{\beta})$) by a *surrogate path* $\beta_M = P(M)\beta$, where $M$ indexes a model in a pre-specified universe $\mathcal{M}$. 
+The model universe is specified as follows: it includes polynomial specifications (up to cubic) and penalized smoothing that shrinks first (effect eventually dies out) and third (effect is smooth) differences. 
+
+Given estimates $\hat{\beta}$, the (non-polynomial) surrogate for a given model $M$ is obtained by solving a penalized least squares problem:
+
+$$
+\begin{align}
+\tilde{\beta}(M)
+&= \tilde{\beta}(\lambda_1, \lambda_2, K) \\
+&= \arg\min_{b}\Bigg(
+\underbrace{(\hat{\beta}-b)^{\prime}V^{-1}(\hat{\beta}-b)}_{\text{distance from $\hat{\beta}$}}
++\lambda_1\,\underbrace{b^{\prime}D_1^{\prime}W_1(K)D_1 b}_{\text{penalty on first difference after horizon $K$}}
++\lambda_2\,\underbrace{b^{\prime}D_3^{\prime}W_3 D_3 b}_{\text{penalty on third difference}}
+\Bigg).
+\end{align}
+$$
+
+where $D_1$ and $D_3$ are first- and third-difference operators, and $\lambda_1$, $\lambda_2$, and $K$ are tuning parameters that control smoothness and the timing of decay toward zero. The solution has closed form:
+
+$$
+\tilde{\beta}(M) = P(M)\hat{\beta}, \quad P(M) = \Big(V_\beta^{-1} + \lambda_1 D_1'W_1(K)D_1 + \lambda_2 D_3'W_3D_3\Big)^{-1} V_\beta^{-1}.
+$$
+
+Then, the best-fitting surrogate model $\hat{M}$ is selected by minimizing a BIC-type criterion:
+
+$$
+\hat{M} = \arg\min_{M \in \mathcal{M}} \; (\hat{\beta}-\tilde{\beta}(M))'V_\beta^{-1}(\hat{\beta}-\tilde{\beta}(M)) + \log(H)\,\text{df}(M),
+$$
+
+where the degrees of freedom is $\text{df}(M) = \mathrm{trace}(P(M))$. 
+Therefore, the main algorithm of the package simply iterates over all models in the pre-specified universe to find $\hat{M}$. 
+
+### Post-Selection Inference
+
+Once $\hat{M}$ is chosen, the package constructs confidence regions using post-selection inference (Berk et al. 2013), which accounts for the model selection step:
+
+$$
+\Pr\!\big(\beta_{\hat{M}} \in \text{CR}_{\text{PoSI}}\big) \ge 1-\alpha.
+$$
 
 
 ## Basic Usage
@@ -53,130 +95,185 @@ data(var_smooth)
 
 # Examine the data structures
 print(estimates_smooth)
-#>  [1] -0.17482676 -0.02004318 -0.10031844  0.07229334 -0.31769306  0.01454694  0.06322594 -0.04186633  0.12340034 -0.04534908
-#> [11] -0.16169097 -0.20259667 -0.03298893 -0.02878808 -0.11865547 -0.33781817 -0.04988252 -0.23286451 -0.34721788 -0.31989801
-#> [21] -0.37015145 -0.18439333 -0.08283743 -0.06628430  0.07793498 -0.16041782  0.08020676 -0.26365956 -0.09156697 -0.08646877
-#> [31]  0.17552747 -0.26331948  0.26817909  0.21390666  0.02886865 -0.03854033 -0.17947818 -0.04629705 -0.26782818  0.03586062
+#>  [1] -0.17482676 -0.02004318 -0.10031844  0.07229334
+#>  [5] -0.31769306  0.01454694  0.06322594 -0.04186633
+#>  [9]  0.12340034 -0.04534908 -0.16169097 -0.20259667
+#> [13] -0.03298893 -0.02878808 -0.11865547 -0.33781817
+#> [17] -0.04988252 -0.23286451 -0.34721788 -0.31989801
+#> [21] -0.37015145 -0.18439333 -0.08283743 -0.06628430
+#> [25]  0.07793498 -0.16041782  0.08020676 -0.26365956
+#> [29] -0.09156697 -0.08646877  0.17552747 -0.26331948
+#> [33]  0.26817909  0.21390666  0.02886865 -0.03854033
+#> [37] -0.17947818 -0.04629705 -0.26782818  0.03586062
 #> [41]  0.17248994 -0.01214121 -0.08781408  0.12013731
-print(var_smooth)
-#>             [,1]       [,2]       [,3]       [,4]       [,5]       [,6]       [,7]       [,8]      [,9]     [,10]     [,11]
-#>  [1,] 0.01981023 0.00000000 0.00000000 0.00000000 0.00000000 0.00000000 0.00000000 0.00000000 0.0000000 0.0000000 0.0000000
-#>  [2,] 0.00000000 0.01981023 0.00000000 0.00000000 0.00000000 0.00000000 0.00000000 0.00000000 0.0000000 0.0000000 0.0000000
-#>  [3,] 0.00000000 0.00000000 0.01981023 0.00000000 0.00000000 0.00000000 0.00000000 0.00000000 0.0000000 0.0000000 0.0000000
-#>  [4,] 0.00000000 0.00000000 0.00000000 0.01981023 0.00000000 0.00000000 0.00000000 0.00000000 0.0000000 0.0000000 0.0000000
-#>  [5,] 0.00000000 0.00000000 0.00000000 0.00000000 0.01981023 0.00000000 0.00000000 0.00000000 0.0000000 0.0000000 0.0000000
-#>  [6,] 0.00000000 0.00000000 0.00000000 0.00000000 0.00000000 0.01981023 0.00000000 0.00000000 0.0000000 0.0000000 0.0000000
-#>  [7,] 0.00000000 0.00000000 0.00000000 0.00000000 0.00000000 0.00000000 0.01981023 0.00000000 0.0000000 0.0000000 0.0000000
-#>  [8,] 0.00000000 0.00000000 0.00000000 0.00000000 0.00000000 0.00000000 0.00000000 0.01981023 0.0000000 0.0000000 0.0000000
-#>  [9,] 0.00000000 0.00000000 0.00000000 0.00000000 0.00000000 0.00000000 0.00000000 0.00000000 0.0142814 0.0000000 0.0000000
-#> [10,] 0.00000000 0.00000000 0.00000000 0.00000000 0.00000000 0.00000000 0.00000000 0.00000000 0.0000000 0.0145656 0.0000000
-#> [11,] 0.00000000 0.00000000 0.00000000 0.00000000 0.00000000 0.00000000 0.00000000 0.00000000 0.0000000 0.0000000 0.0148526
-#> [12,] 0.00000000 0.00000000 0.00000000 0.00000000 0.00000000 0.00000000 0.00000000 0.00000000 0.0000000 0.0000000 0.0000000
-#> [13,] 0.00000000 0.00000000 0.00000000 0.00000000 0.00000000 0.00000000 0.00000000 0.00000000 0.0000000 0.0000000 0.0000000
-#> [14,] 0.00000000 0.00000000 0.00000000 0.00000000 0.00000000 0.00000000 0.00000000 0.00000000 0.0000000 0.0000000 0.0000000
-#> [15,] 0.00000000 0.00000000 0.00000000 0.00000000 0.00000000 0.00000000 0.00000000 0.00000000 0.0000000 0.0000000 0.0000000
-#> [16,] 0.00000000 0.00000000 0.00000000 0.00000000 0.00000000 0.00000000 0.00000000 0.00000000 0.0000000 0.0000000 0.0000000
-#> [17,] 0.00000000 0.00000000 0.00000000 0.00000000 0.00000000 0.00000000 0.00000000 0.00000000 0.0000000 0.0000000 0.0000000
-#> [18,] 0.00000000 0.00000000 0.00000000 0.00000000 0.00000000 0.00000000 0.00000000 0.00000000 0.0000000 0.0000000 0.0000000
-#> [19,] 0.00000000 0.00000000 0.00000000 0.00000000 0.00000000 0.00000000 0.00000000 0.00000000 0.0000000 0.0000000 0.0000000
-#> [20,] 0.00000000 0.00000000 0.00000000 0.00000000 0.00000000 0.00000000 0.00000000 0.00000000 0.0000000 0.0000000 0.0000000
-#> [21,] 0.00000000 0.00000000 0.00000000 0.00000000 0.00000000 0.00000000 0.00000000 0.00000000 0.0000000 0.0000000 0.0000000
-#> [22,] 0.00000000 0.00000000 0.00000000 0.00000000 0.00000000 0.00000000 0.00000000 0.00000000 0.0000000 0.0000000 0.0000000
-#>           [,12]    [,13]     [,14]     [,15]     [,16]     [,17]   [,18]     [,19]     [,20]     [,21]     [,22]    [,23]
-#>  [1,] 0.0000000 0.000000 0.0000000 0.0000000 0.0000000 0.0000000 0.00000 0.0000000 0.0000000 0.0000000 0.0000000 0.000000
-#>  [2,] 0.0000000 0.000000 0.0000000 0.0000000 0.0000000 0.0000000 0.00000 0.0000000 0.0000000 0.0000000 0.0000000 0.000000
-#>  [3,] 0.0000000 0.000000 0.0000000 0.0000000 0.0000000 0.0000000 0.00000 0.0000000 0.0000000 0.0000000 0.0000000 0.000000
-#>  [4,] 0.0000000 0.000000 0.0000000 0.0000000 0.0000000 0.0000000 0.00000 0.0000000 0.0000000 0.0000000 0.0000000 0.000000
-#>  [5,] 0.0000000 0.000000 0.0000000 0.0000000 0.0000000 0.0000000 0.00000 0.0000000 0.0000000 0.0000000 0.0000000 0.000000
-#>  [6,] 0.0000000 0.000000 0.0000000 0.0000000 0.0000000 0.0000000 0.00000 0.0000000 0.0000000 0.0000000 0.0000000 0.000000
-#>  [7,] 0.0000000 0.000000 0.0000000 0.0000000 0.0000000 0.0000000 0.00000 0.0000000 0.0000000 0.0000000 0.0000000 0.000000
-#>  [8,] 0.0000000 0.000000 0.0000000 0.0000000 0.0000000 0.0000000 0.00000 0.0000000 0.0000000 0.0000000 0.0000000 0.000000
-#>  [9,] 0.0000000 0.000000 0.0000000 0.0000000 0.0000000 0.0000000 0.00000 0.0000000 0.0000000 0.0000000 0.0000000 0.000000
-#> [10,] 0.0000000 0.000000 0.0000000 0.0000000 0.0000000 0.0000000 0.00000 0.0000000 0.0000000 0.0000000 0.0000000 0.000000
-#> [11,] 0.0000000 0.000000 0.0000000 0.0000000 0.0000000 0.0000000 0.00000 0.0000000 0.0000000 0.0000000 0.0000000 0.000000
-#> [12,] 0.0151424 0.000000 0.0000000 0.0000000 0.0000000 0.0000000 0.00000 0.0000000 0.0000000 0.0000000 0.0000000 0.000000
-#> [13,] 0.0000000 0.015435 0.0000000 0.0000000 0.0000000 0.0000000 0.00000 0.0000000 0.0000000 0.0000000 0.0000000 0.000000
-#> [14,] 0.0000000 0.000000 0.0157304 0.0000000 0.0000000 0.0000000 0.00000 0.0000000 0.0000000 0.0000000 0.0000000 0.000000
-#> [15,] 0.0000000 0.000000 0.0000000 0.0160286 0.0000000 0.0000000 0.00000 0.0000000 0.0000000 0.0000000 0.0000000 0.000000
-#> [16,] 0.0000000 0.000000 0.0000000 0.0000000 0.0163296 0.0000000 0.00000 0.0000000 0.0000000 0.0000000 0.0000000 0.000000
-#> [17,] 0.0000000 0.000000 0.0000000 0.0000000 0.0000000 0.0166334 0.00000 0.0000000 0.0000000 0.0000000 0.0000000 0.000000
-#> [18,] 0.0000000 0.000000 0.0000000 0.0000000 0.0000000 0.0000000 0.01694 0.0000000 0.0000000 0.0000000 0.0000000 0.000000
-#> [19,] 0.0000000 0.000000 0.0000000 0.0000000 0.0000000 0.0000000 0.00000 0.0172494 0.0000000 0.0000000 0.0000000 0.000000
-#> [20,] 0.0000000 0.000000 0.0000000 0.0000000 0.0000000 0.0000000 0.00000 0.0000000 0.0175616 0.0000000 0.0000000 0.000000
-#> [21,] 0.0000000 0.000000 0.0000000 0.0000000 0.0000000 0.0000000 0.00000 0.0000000 0.0000000 0.0178766 0.0000000 0.000000
-#> [22,] 0.0000000 0.000000 0.0000000 0.0000000 0.0000000 0.0000000 0.00000 0.0000000 0.0000000 0.0000000 0.0181944 0.000000
-#>           [,24]     [,25]     [,26]     [,27]   [,28]     [,29]     [,30]     [,31]     [,32]    [,33]     [,34]     [,35]
-#>  [1,] 0.0000000 0.0000000 0.0000000 0.0000000 0.00000 0.0000000 0.0000000 0.0000000 0.0000000 0.000000 0.0000000 0.0000000
-#>  [2,] 0.0000000 0.0000000 0.0000000 0.0000000 0.00000 0.0000000 0.0000000 0.0000000 0.0000000 0.000000 0.0000000 0.0000000
-#>  [3,] 0.0000000 0.0000000 0.0000000 0.0000000 0.00000 0.0000000 0.0000000 0.0000000 0.0000000 0.000000 0.0000000 0.0000000
-#>  [4,] 0.0000000 0.0000000 0.0000000 0.0000000 0.00000 0.0000000 0.0000000 0.0000000 0.0000000 0.000000 0.0000000 0.0000000
-#>  [5,] 0.0000000 0.0000000 0.0000000 0.0000000 0.00000 0.0000000 0.0000000 0.0000000 0.0000000 0.000000 0.0000000 0.0000000
-#>  [6,] 0.0000000 0.0000000 0.0000000 0.0000000 0.00000 0.0000000 0.0000000 0.0000000 0.0000000 0.000000 0.0000000 0.0000000
-#>  [7,] 0.0000000 0.0000000 0.0000000 0.0000000 0.00000 0.0000000 0.0000000 0.0000000 0.0000000 0.000000 0.0000000 0.0000000
-#>  [8,] 0.0000000 0.0000000 0.0000000 0.0000000 0.00000 0.0000000 0.0000000 0.0000000 0.0000000 0.000000 0.0000000 0.0000000
-#>  [9,] 0.0000000 0.0000000 0.0000000 0.0000000 0.00000 0.0000000 0.0000000 0.0000000 0.0000000 0.000000 0.0000000 0.0000000
-#> [10,] 0.0000000 0.0000000 0.0000000 0.0000000 0.00000 0.0000000 0.0000000 0.0000000 0.0000000 0.000000 0.0000000 0.0000000
-#> [11,] 0.0000000 0.0000000 0.0000000 0.0000000 0.00000 0.0000000 0.0000000 0.0000000 0.0000000 0.000000 0.0000000 0.0000000
-#> [12,] 0.0000000 0.0000000 0.0000000 0.0000000 0.00000 0.0000000 0.0000000 0.0000000 0.0000000 0.000000 0.0000000 0.0000000
-#> [13,] 0.0000000 0.0000000 0.0000000 0.0000000 0.00000 0.0000000 0.0000000 0.0000000 0.0000000 0.000000 0.0000000 0.0000000
-#> [14,] 0.0000000 0.0000000 0.0000000 0.0000000 0.00000 0.0000000 0.0000000 0.0000000 0.0000000 0.000000 0.0000000 0.0000000
-#> [15,] 0.0000000 0.0000000 0.0000000 0.0000000 0.00000 0.0000000 0.0000000 0.0000000 0.0000000 0.000000 0.0000000 0.0000000
-#> [16,] 0.0000000 0.0000000 0.0000000 0.0000000 0.00000 0.0000000 0.0000000 0.0000000 0.0000000 0.000000 0.0000000 0.0000000
-#> [17,] 0.0000000 0.0000000 0.0000000 0.0000000 0.00000 0.0000000 0.0000000 0.0000000 0.0000000 0.000000 0.0000000 0.0000000
-#> [18,] 0.0000000 0.0000000 0.0000000 0.0000000 0.00000 0.0000000 0.0000000 0.0000000 0.0000000 0.000000 0.0000000 0.0000000
-#> [19,] 0.0000000 0.0000000 0.0000000 0.0000000 0.00000 0.0000000 0.0000000 0.0000000 0.0000000 0.000000 0.0000000 0.0000000
-#> [20,] 0.0000000 0.0000000 0.0000000 0.0000000 0.00000 0.0000000 0.0000000 0.0000000 0.0000000 0.000000 0.0000000 0.0000000
-#> [21,] 0.0000000 0.0000000 0.0000000 0.0000000 0.00000 0.0000000 0.0000000 0.0000000 0.0000000 0.000000 0.0000000 0.0000000
-#> [22,] 0.0000000 0.0000000 0.0000000 0.0000000 0.00000 0.0000000 0.0000000 0.0000000 0.0000000 0.000000 0.0000000 0.0000000
-#>           [,36]     [,37]   [,38]     [,39]     [,40]     [,41]     [,42]    [,43]     [,44]
-#>  [1,] 0.0000000 0.0000000 0.00000 0.0000000 0.0000000 0.0000000 0.0000000 0.000000 0.0000000
-#>  [2,] 0.0000000 0.0000000 0.00000 0.0000000 0.0000000 0.0000000 0.0000000 0.000000 0.0000000
-#>  [3,] 0.0000000 0.0000000 0.00000 0.0000000 0.0000000 0.0000000 0.0000000 0.000000 0.0000000
-#>  [4,] 0.0000000 0.0000000 0.00000 0.0000000 0.0000000 0.0000000 0.0000000 0.000000 0.0000000
-#>  [5,] 0.0000000 0.0000000 0.00000 0.0000000 0.0000000 0.0000000 0.0000000 0.000000 0.0000000
-#>  [6,] 0.0000000 0.0000000 0.00000 0.0000000 0.0000000 0.0000000 0.0000000 0.000000 0.0000000
-#>  [7,] 0.0000000 0.0000000 0.00000 0.0000000 0.0000000 0.0000000 0.0000000 0.000000 0.0000000
-#>  [8,] 0.0000000 0.0000000 0.00000 0.0000000 0.0000000 0.0000000 0.0000000 0.000000 0.0000000
-#>  [9,] 0.0000000 0.0000000 0.00000 0.0000000 0.0000000 0.0000000 0.0000000 0.000000 0.0000000
-#> [10,] 0.0000000 0.0000000 0.00000 0.0000000 0.0000000 0.0000000 0.0000000 0.000000 0.0000000
-#> [11,] 0.0000000 0.0000000 0.00000 0.0000000 0.0000000 0.0000000 0.0000000 0.000000 0.0000000
-#> [12,] 0.0000000 0.0000000 0.00000 0.0000000 0.0000000 0.0000000 0.0000000 0.000000 0.0000000
-#> [13,] 0.0000000 0.0000000 0.00000 0.0000000 0.0000000 0.0000000 0.0000000 0.000000 0.0000000
-#> [14,] 0.0000000 0.0000000 0.00000 0.0000000 0.0000000 0.0000000 0.0000000 0.000000 0.0000000
-#> [15,] 0.0000000 0.0000000 0.00000 0.0000000 0.0000000 0.0000000 0.0000000 0.000000 0.0000000
-#> [16,] 0.0000000 0.0000000 0.00000 0.0000000 0.0000000 0.0000000 0.0000000 0.000000 0.0000000
-#> [17,] 0.0000000 0.0000000 0.00000 0.0000000 0.0000000 0.0000000 0.0000000 0.000000 0.0000000
-#> [18,] 0.0000000 0.0000000 0.00000 0.0000000 0.0000000 0.0000000 0.0000000 0.000000 0.0000000
-#> [19,] 0.0000000 0.0000000 0.00000 0.0000000 0.0000000 0.0000000 0.0000000 0.000000 0.0000000
-#> [20,] 0.0000000 0.0000000 0.00000 0.0000000 0.0000000 0.0000000 0.0000000 0.000000 0.0000000
-#> [21,] 0.0000000 0.0000000 0.00000 0.0000000 0.0000000 0.0000000 0.0000000 0.000000 0.0000000
-#> [22,] 0.0000000 0.0000000 0.00000 0.0000000 0.0000000 0.0000000 0.0000000 0.000000 0.0000000
-#>  [ reached 'max' / getOption("max.print") -- omitted 22 rows ]
+print(var_smooth[1:4, 1:4])
+#> Warning in print(var_smooth[1:4, 1:4]): internal error 1
+#> in R_decompress1 with libdeflate
+#> Error in print(var_smooth[1:4, 1:4]): lazy-load database 'C:\Users\c1rak01\AppData\Local\R\win-library\4.4\plausibounds/data/Rdata.rdb' is corrupt
 ```
 
-The `estimates_smooth` vector contains 36 treatment effect estimates at different horizons and 8 preperiods. The `var_smooth` matrix is a diagonal variance-covariance matrix with no correlation between periods.
+The `estimates_smooth` vector contains 36 treatment effect estimates at different horizons and 8 preperiods. The `var_smooth` matrix is a diagonal variance matrix with no correlation between periods.
 
 ### Example 1: Independent Errors
 
-The simplest case uses the `plausible_bounds()` function with just the estimates and variance-covariance matrix. The `alpha` parameter controls the confidence level (default is 0.05 for 95% confidence):
+A simple case uses the `plausible_bounds()` function with just the estimates and variance. The `alpha` parameter controls the confidence level (default is 0.05 for 95% confidence):
+
+
+``` r
+# Remove pretrends from the example dataset
+estimates_smooth_nopretrends <- estimates_smooth[9:44]
+var_smooth_nopretrends <- var_smooth[9:44, 9:44]
+#> Warning: restarting interrupted promise evaluation
+#> Warning: internal error 1 in R_decompress1 with libdeflate
+#> Error: lazy-load database 'C:\Users\c1rak01\AppData\Local\R\win-library\4.4\plausibounds/data/Rdata.rdb' is corrupt
+
+pb <- plausible_bounds(
+  estimates = estimates_smooth_nopretrends,
+  var = var_smooth_nopretrends
+)
+#> Error: object 'var_smooth_nopretrends' not found
+```
+
+The returned object is a list containing the bounds, test statistics, and metadata. The `summary()` method extracts the key results in a tabular format, showing the horizon, original coefficient estimates, surrogate path, and restricted bounds for that path:
+
+
+``` r
+summary(pb)
+#> Error: object 'pb' not found
+```
+
+For a more detailed view of the object structure:
+
+
+``` r
+str(pb)
+#> Error: object 'pb' not found
+```
+
+The object contains several components. The `restricted_bounds` data frame is identical to that produced with the `summary()` method.
+The `restricted_bounds_metadata` list stores information about the model selection process, including the surrogate class selected (e.g., polynomial degree or penalized smoothing parameters), the degrees of freedom, and the sup-t critical value used in constructing the bounds.
+The `avg_treatment_effect` component provides the average treatment effect estimate, its standard error, and confidence interval. 
+
+When arguments `include_pointwise` and `include_supt` of `plausible_bounds()` are `TRUE` (the default), the object also contains `pointwise_bounds` and `supt_bounds` lists with the corresponding confidence bounds. 
+Finally, `wald_test` contains test statistics and p-values for testing the joint null hypothesis of no treatment effect.
 
 
 
+### Visualization with `create_plot()`
+
+Next let's plot the results:
 
 
+``` r
+create_plot(pb)
+#> Error: object 'pb' not found
+```
+
+The plot displays several types of bounds and statistics, each serving a different inferential purpose:
+
+**Point estimates (black dots)**: The original treatment effect estimates $\hat{\beta}_h$ at each horizon. 
+
+**Restricted bounds (blue dashed lines)**: The main contribution of this package. These bounds provide uniform $(1-\alpha)$ coverage for the selected surrogate path (the smooth blue line), not the true treatment path itself. The surrogate path is chosen via BIC from the pre-specified model universe and represents a data-dependent smoothed approximation to the true treatment path. The restricted bounds adapt to the smoothness and correlation structure, often remaining narrower than sup-t intervals.
+
+**Pointwise bounds (gray horizontal bars)**: Standard confidence intervals for each horizon separately, constructed as $\hat{\beta}_h \pm z_{1-\alpha/2} \sqrt{V_{\beta,hh}}$. 
+
+**Sup-t bounds (gray vertical lines)**: Uniform confidence bands that provide $(1-\alpha)$ joint coverage of the entire treatment path. These are constructed using the supremum of $t$-statistics from individual coefficients. Guarantee full-path coverage but can become quite wide.
+
+**Annotations**: The bottom of the plot shows several summary statistics. The "No effect p-value" comes from a Wald test of the null hypothesis that all treatment effects are zero. The "Average effect [CI]" provides the average treatment effect (ATE) $\bar{\beta} = \frac{1}{H}\sum_h \beta_h$ along with its confidence interval—this quantifies the overall magnitude of the treatment.
+
+### Example 2: Correlated Errors
+
+When errors are correlated across horizons (common in dynamic settings), the restricted bounds adapt to the correlation structure. While high correlation can widen the restricted bounds compared to the independent error case, they usually remain narrower than sup-t bands:
 
 
+``` r
+pb_corr <- plausible_bounds(
+  estimates = estimates_bighump[1:12],
+  var = var_bighump[1:12, 1:12],
+  alpha = 0.05
+)
+```
 
 
+``` r
+create_plot(pb_corr)
+```
+
+<div class="figure" style="text-align: center">
+<img src="figs/corr-plot-1.png" alt="Plausible bounds for treatment path estimates with correlated errors"  />
+<p class="caption">Plausible bounds for treatment path estimates with correlated errors</p>
+</div>
+
+The restricted bounds tend to be wider than in the IID case due to the correlation structure.
 
 
+## Pre-Treatment Periods
+
+The package supports designs where some periods occur before treatment. This allows testing for pre-trends and distinguishing them from treatment effects. When specifying the `preperiods` argument, the function automatically computes two Wald tests: one testing $H_0$: no pre-trends in the pre-treatment periods, and another testing $H_0$: no treatment effect in the post-treatment periods. Both p-values appear in the plot annotations.
+
+### Specifying Pre-Treatment Periods
+
+Use the `preperiods` argument to indicate how many of the initial estimates correspond to pre-treatment periods. Note that period 0 (the period immediately before treatment) is assumed to be normalized to zero and should not be included in the estimates vector:
 
 
+``` r
+pb_pre <- plausible_bounds(
+  estimates = estimates_smooth,
+  var = var_smooth,
+  alpha = 0.05,
+  preperiods = 8  # First 8 elements are pre-treatment periods
+)
+#> Warning in plausible_bounds(estimates = estimates_smooth,
+#> var = var_smooth, : restarting interrupted promise
+#> evaluation
+#> Warning in plausible_bounds(estimates = estimates_smooth,
+#> var = var_smooth, : internal error 1 in R_decompress1 with
+#> libdeflate
+#> Error in plausible_bounds(estimates = estimates_smooth, var = var_smooth, : lazy-load database 'C:\Users\c1rak01\AppData\Local\R\win-library\4.4\plausibounds/data/Rdata.rdb' is corrupt
+```
 
 
+``` r
+create_plot(pb_pre)
+#> Error: object 'pb_pre' not found
+```
+
+The vertical dashed line at event time 0 separates pre- and post-treatment periods. Pre-treatment estimates appear at negative horizons, revealing any pre-existing trends. The restricted bounds and surrogate path are only computed for the post-treatment periods, since the goal is inference on the treatment effect path.
+
+The annotations now include both Wald test p-values. The "Pretrends p-value" tests whether the pre-treatment coefficients are jointly zero—a rejection indicates violations of parallel trends. The "No effect p-value" tests whether the post-treatment coefficients are jointly zero. In this example, the pre-trends test rejects, suggesting that parallel trends may not hold.
 
 
+## Customizing plots
+
+The `create_plot()` function provides a few arguments to customize which elements appear in the plot. 
+The `show_annotations` argument controls whether the Wald test results and average treatment effect are displayed at the bottom. 
+The `show_supt` and `show_pointwise` arguments control whether sup-t and pointwise bounds are included. 
+For a cleaner display focusing only on the restricted and pointwise bounds:
 
 
+``` r
+create_plot(pb, show_annotations = FALSE, show_pointwise = FALSE, show_supt = FALSE)
+#> Error: object 'pb' not found
+```
 
 
+## Parallel Processing
+
+For datasets with many horizons, the restricted bounds calculation can be time-consuming due to the model selection procedure. The `parallel` argument enables parallel computation across the model universe. Use `n_cores` to specify the number of cores (the default uses all available cores minus one):
+
+
+``` r
+pb_parallel <- plausible_bounds(
+  estimates = estimates_smooth,
+  var = var_smooth,
+  alpha = 0.05,
+  parallel = TRUE,
+  n_cores = 4
+)
+```
+
+
+## References
+
+* Freyaldenhoven, S. and Hansen, C. (2025). "(Visualizing) Plausible Treatment Effect Paths." Federal Reserve Bank of Philadelphia and University of Chicago.
+* Berk, R., Brown, L., Buja, A., Zhang, K., and Zhao, L. (2013). "Valid post-selection inference." *Annals of Statistics*, 41(2):802-837.
